force-app/main/default/objects/Deal_Participant_SLA__mdt/Deal_Participant_SLA__mdt.object-meta.xml
<CustomObject><label
  >Deal Participant SLA</label><pluralLabel
  >Deal Participant SLAs</pluralLabel><visibility
  >Public</visibility></CustomObject>