force-app/main/default/objects/Deal_Participant_SLA__mdt/fields/Escalation_Role__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Role__c</fullName>
    <label>Escalation Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>