force-app/main/default/objects/Deal_Participant_SLA__mdt/fields/Invitation_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Response_Hours__c</fullName>
    <label>Invitation Response Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>