force-app/main/default/objects/Deal_Participant_SLA__mdt/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <label>Participant Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>