force-app/main/default/objects/Deal_Participant_SLA__mdt/fields/Warning_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Warning_Percentage__c</fullName>
    <description>Percentage of the invitation response window elapsed before
  DealParticipantExpiryBatch flags the invitation as at risk and publishes
  DealParticipantInvitationAtRisk (e.g. 75 = warn once 75% of the time
  between Invited_On__c and Respond_By__c has passed).</description>
    <label>Warning Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>